--- a/research/2_data_validation.ipynb
+++ b/research/2_data_validation.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,16 +405,97 @@
     "\n",
     "    def get_data_validation_config(self) -> DataValidationConfig:\n",
     "        config=self.config.data_validation\n",
+    "        schema = self.schema.COLUMNS\n",
     "        create_directories([config.root_dir])\n",
     "\n",
     "        data_validation_config = DataValidationConfig(\n",
-    "            root_dir = config.root_dir,\n",
-    "            source_URL=config.source_URL,\n",
-    "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir\n",
+    "            root_dir=config.root_dir,\n",
+    "            STATUS_FILE=config.STATUS_FILE,\n",
+    "            unzip_data_dir = config.unzip_data_dir,\n",
+    "            all_schema=schema,\n",
     "        )\n",
     "        return data_validation_config"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from src.datascience import logger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataValidation:\n",
+    "    def __init__(self, config: DataValidationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def validate_all_columns(self)-> bool:\n",
+    "        try:\n",
+    "            validation_status = None\n",
+    "\n",
+    "            data = pd.read_csv(self.config.unzip_data_dir)\n",
+    "            all_cols = list(data.columns)\n",
+    "\n",
+    "            all_schema = self.config.all_schema.keys()\n",
+    "\n",
+    "            \n",
+    "            for col in all_cols:\n",
+    "                if col not in all_schema:\n",
+    "                    validation_status = False\n",
+    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "                else:\n",
+    "                    validation_status = True\n",
+    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "\n",
+    "            return validation_status\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-04-01 21:23:55,549: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-04-01 21:23:55,553: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-04-01 21:23:55,558: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-04-01 21:23:55,560: INFO: common: created directory at: artifacts]\n",
+      "[2025-04-01 21:23:55,563: INFO: common: created directory at: artifacts/data_validation]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValidation(config=data_validation_config)\n",
+    "    data_validation.validate_all_columns()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
